--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -17,6 +17,15 @@ modules:
       - source: system
         destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
 
+  - type: script
+    scripts:
+      - chmod +x /usr/local/bin/setup-neovim.sh
+
+  - type: systemd
+    user:
+      enabled:
+        - neovim-setup.service
+
   - type: dnf
     repos:
       copr:
@@ -25,12 +34,21 @@ modules:
       packages:
         - micro
         - starship
+        - tmux
+        - zsh
     remove:
       packages:
         # example: removing firefox (in favor of the flatpak)
         # "firefox" is the main package, "firefox-langpacks" is a dependency
         - firefox
         - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
+
+  - type: brew
+    brew-analytics: false
+    nofile-limits: true
+    formulae:
+      - lazygit
+      - bob
 
   - type: default-flatpaks
     configurations:
@@ -40,6 +58,13 @@ modules:
         install: # system flatpaks we want all users to have and not remove
           - org.mozilla.firefox
           - org.gnome.Loupe
+          - io.alacritty.Alacritty
+          - com.slack.Slack
+          - com.vivaldi.Vivaldi
+          - com.getpostman.Postman
+          - com.visualstudio.code
+          - com.jetbrains.Rider
+          - md.obsidian.Obsidian
       - scope: user # Also add Flathub user repo, but no user packages
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
