--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -46,9 +46,6 @@ modules:
   - type: brew
     brew-analytics: false
     nofile-limits: true
-    formulae:
-      - lazygit
-      - bob
 
   - type: default-flatpaks
     configurations:
@@ -56,8 +53,6 @@ modules:
         scope: system
         # If no repo information is specified, Flathub will be used by default
         install: # system flatpaks we want all users to have and not remove
-          - org.mozilla.firefox
-          - org.gnome.Loupe
           - io.alacritty.Alacritty
           - com.slack.Slack
           - com.vivaldi.Vivaldi
@@ -65,6 +60,11 @@ modules:
           - com.visualstudio.code
           - com.jetbrains.Rider
           - md.obsidian.Obsidian
+          - com.github.tchx84.Flatseal
+          - io.github.flattool.Warehouse
+          - io.missioncenter.MissionCenter
+          - com.github.rafostar.Clapper
+          - org.gnome.Loupe
       - scope: user # Also add Flathub user repo, but no user packages
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
