--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -19,19 +19,19 @@ modules:
       - xone
     nvidia-driver: "nvidia-open"  # or "nvidia-open" for newer GPUs
 
-  #- type: files
-  #  files:
-  #    - source: system
-  #      destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
+  # Disable and mask zram service
+  - type: systemd
+    system:
+      disabled:
+        - zram-generator@zram0.service
+      masked:
+        - zram-generator@zram0.service
 
-  #- type: script
-  #  scripts:
-  #    - chmod +x /usr/local/bin/setup-neovim.sh
-
-  #- type: systemd
-  #  user:
-  #    enabled:
-  #      - neovim-setup.service
+  # Copy zswap configuration file
+  - type: files
+    files:
+      - source: system/etc/modprobe.d/zswap.conf
+        dest: /etc/modprobe.d/zswap.conf
 
   - type: dnf
     repos:
@@ -80,3 +80,8 @@ modules:
       - scope: user # Also add Flathub user repo, but no user packages
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
+kargs:
+  - zswap.enabled=1
+  - zswap.compressor=zstd
+  - zswap.max_pool_percent=25
+  - zswap.zpool=z3fold
