add gnome extensions

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -84,6 +84,7 @@ modules:
           - io.missioncenter.MissionCenter
           - com.github.rafostar.Clapper
           - org.gnome.Loupe
+          - org.gnome.Extensions
       - scope: user # Also add Flathub user repo, but no user packages
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
